brat/test/golden/error/multilambda-id2.brat
g(Nat) -> { Qubit -o Qubit }
g = { 0 => ||succ(n) => | }
